login form added, search box added

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" th:src="@{css/js/script.js}"></script>
     <script type="text/javascript" th:src="@{css/js/coin-slider.min.js}"></script>
     <script type="text/javascript" th:src="@{webjars/jquery/2.1.0/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{css/js/pagination.js}"></script>
     <script type="text/javascript" th:src="@{https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js}"></script>
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"></link>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.0/bootstrap-table.min.css" rel="stylesheet"/>
