--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -12,11 +12,9 @@
         <div class="clr"></div>
         <div class="menu_nav">
             <ul>
-                <li class="active"><a href="/listall"><span>List all movies</span></a></li>
-                <li><a href="support.html"><span>Find movies by category</span></a></li>
-                <li><a href="about.html"><span>Find movies by actor</span></a></li>
-                <li><a href="blog.html"><span>Find movies by language</span></a></li>
-                <li><a href="contact.html"><span>Find movies by tittle</span></a></li>
+                <li class="active"><a href="/listall"><span>Search movies</span></a></li>
+                <li><a href="/"><span>Home</span></a></li>
+                <li><a href="/login"><span>Login</span></a></li>
             </ul>
         </div>
     </div>
