--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,81 +1,109 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="common/header :: common-header" />
-
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<head>
+	<title>Login</title>
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/vendor/bootstrap/css/bootstrap.min.css"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/fonts/Linearicons-Free-v1.0.0/icon-font.min.css"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/vendor/animate/animate.css"/>
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="css/vendor/css-hamburgers/hamburgers.min.css"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/vendor/animsition/css/animsition.min.css"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/vendor/select2/select2.min.css"/>
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="css/vendor/daterangepicker/daterangepicker.css"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/util.css"/>
+	<link rel="stylesheet" type="text/css" href="css/main.css"/>
+<!--===============================================================================================-->
+</head>
 <body>
+	
+	<div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100 p-t-90 p-b-30">
+				<form class="login100-form validate-form" th:action="@{/login}" >
+					<span class="login100-form-title p-b-40">
+						Login
+					</span>
 
-<div th:replace="common/navbar :: navbar-main" />
+					<div>
+						<a href="#" class="btn-login-with bg1 m-b-10">
+							<i class="fa fa-facebook-official"></i>
+							Login with Facebook
+						</a>
 
-<div class="container">
+						<a href="#" class="btn-login-with bg2">
+							<i class="fa fa-twitter"></i>
+							Login with Twitter
+						</a>
+					</div>
 
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3 text-center">
+					<div class="text-center p-t-55 p-b-30">
+						<span class="txt1">
+							Login with email
+						</span>
+					</div>
 
-            <div th:if="${param.error}" class="alert alert-danger alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">x</span>
-                </button>
-                <p th:text="#{login.error.message}" />
-            </div>
-            <div th:if="${param.logout}" class="alert alert-success alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">x</span>
-                </button>
-                <p th:text="#{login.logout.success}" />
-            </div>
-        </div>
-    </div>
+					<div class="wrap-input100 validate-input m-b-16">
+						<input class="input100" type="text" name="userName" placeholder="Username"/>
+						<span class="focus-input100"></span>
+					</div>
 
-    <div class="row">
+					<div class="wrap-input100 validate-input m-b-20" data-validate = "Please enter password">
+						<span class="btn-show-pass">
+							<i class="fa fa fa-eye"></i>
+						</span>
+						<input class="input100" type="password" name="user_password" placeholder="Password"/>
+						<span class="focus-input100"></span>
+					</div>
 
-        <div class="col-md-6 col-md-offset-3">
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn">
+							Login
+						</button>
+					</div>
+					
+					<div class="flex-col-c p-t-224">
+						<span class="txt2 p-b-10">
+							Don’t have an account?
+						</span>
 
-            <div class="well">
-
-                <div class="text-center">
-
-                    <h1 th:text="#{login.h1.text}" />
-                    <p class="lead" th:text="#{login.p.lead}" />
-
-                </div>
-
-                <div class="text-left">
-
-                    <form id="loginForm"
-                          th:action="@{/login}"
-                          method="post">
-
-                        <div class="form-group">
-                            <label for="userName" th:text="#{login.username.text}" />
-                            <input type="text" id="userName" name="userName" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="user_password" th:text="#{login.password.text}" />
-                            <input type="password" id="user_password" name="user_password" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <button type="submit" th:text="#{navbar.login.text}" class="btn btn-primary" />
-                        </div>
-
-                    </form>
-                    <a th:href="@{/forgotmypassword}" th:text="#{login.forgot.password.text}" />
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
-</div>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<div th:replace="common/header :: before-body-scripts" />
+						<a href="#" class="txt3 bo1 hov1">
+							Sign up now
+						</a>
+					</div>
+					
+				</form>
+			</div>
+		</div>
+	</div>
+	
+	
+<!--===============================================================================================-->
+	<script src="css/vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="css/vendor/animsition/js/animsition.min.js"></script>
+<!--===============================================================================================-->
+	<script src="css/vendor/bootstrap/js/popper.js"></script>
+	<script src="css/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="css/vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<script src="css/vendor/daterangepicker/moment.min.js"></script>
+	<script src="css/vendor/daterangepicker/daterangepicker.js"></script>
+<!--===============================================================================================-->
+	<script src="css/vendor/countdowntime/countdowntime.js"></script>
+<!--===============================================================================================-->
+	<script src="css/js/main.js"></script>
 
 </body>
 </html>
