problems with login fixed

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,8 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-t-90 p-b-30">
-				<form class="login100-form validate-form" th:action="@{/login}" >
+				<form class="login100-form validate-form"
+					  th:action="@{/login}" method="post">
 					<span class="login100-form-title p-b-40">
 						Login
 					</span>
@@ -62,12 +63,12 @@
 						<span class="btn-show-pass">
 							<i class="fa fa fa-eye"></i>
 						</span>
-						<input class="input100" type="password" name="user_password" placeholder="Password"/>
+						<input class="input100" type="password" name="user_password" id="user_password" placeholder="Password"/>
 						<span class="focus-input100"></span>
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+						<button class="login100-form-btn" type="submit">
 							Login
 						</button>
 					</div>
