--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7,17 +7,17 @@
 
 @font-face {
   font-family: Oswald-Regular;
-  src: url('../fonts/oswald/Oswald-Regular.ttf'); 
+  src: url('./fonts/oswald/Oswald-Regular.ttf');
 }
 
 @font-face {
   font-family: Oswald-Medium;
-  src: url('../fonts/oswald/Oswald-Medium.ttf'); 
+  src: url('./fonts/oswald/Oswald-Medium.ttf');
 }
 
 @font-face {
   font-family: Oswald-Bold;
-  src: url('../fonts/oswald/Oswald-Bold.ttf'); 
+  src: url('./fonts/oswald/Oswald-Bold.ttf');
 }
 
 
